--- a/readthedocsext/theme/templates/organizations/organization_form.html
+++ b/readthedocsext/theme/templates/organizations/organization_form.html
@@ -13,73 +13,84 @@
       <div class="eight wide computer sixteen wide tablet left aligned column">
 
         <h2 class="ui medium heading">
-          {% trans "Create a new organization" %}
+          {% trans "Join or create an organization" %}
         </h2>
 
         <div class="ui segment">
-          <div class="ui relaxed list">
+          <div class="ui link list" data-bind="using: new OrganizationCreateView()">
+                {% comment %}
+                Show nothing when the user arrives at this page.
+                Force them to select an option.
+                {% endcomment %}
+            <a class="item" data-tab="empty"></a>
 
-            <div class="item">
-              <i class="fad fa-building medium middle aligned icon"></i>
+            <a class="item" data-tab="registered">
+              <i class="fad fa-building big icon"></i>
               <div class="content">
                 <div class="header">
                   {% trans "Join an existing organization" %}
                 </div>
-
                 <div class="description">
-                  {% blocktrans trimmed %}
-                    Someone else already created an organization on Read the Docs and invited you to join.
-                  {% endblocktrans %}
+                  <p>
+                    {% blocktrans trimmed %}
+                      Someone else already created an organization on Read the Docs and invited you to join.
+                    {% endblocktrans %}
+                  </p>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <div class="item">
-              <i class="fad fa-plus medium middle aligned icon"></i>
+            <a class="item" data-tab="new">
+              <i class="fad fa-plus big icon"></i>
               <div class="content">
-                <div class="header">{% trans "I want to create a new organization" %}</div>
+                <div class="header">
+                  {% trans "Create a new organization" %}
+                </div>
                 <div class="description">
-                  {% blocktrans trimmed %}
-                    You want to create an organization for your company and start a 30 day trial.
-                  {% endblocktrans %}
+                  <p>
+                    {% blocktrans trimmed %}
+                      You want to create an organization for your company and start a 30 day trial.
+                    {% endblocktrans %}
+                  </p>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <div class="item">
-              <i class="fas fa-question medium middle aligned icon"></i>
+            <a class="item" data-tab="not-sure">
+              <i class="fad fa-question big icon"></i>
               <div class="content">
-                <div class="header">{% trans "I'm not sure" %}</div>
+                <div class="header">
+
+                  {% trans "I'm not sure" %}
+                </div>
                 <div class="description">
-                  {% blocktrans trimmed %}
-                    I'm not sure what I'm doing and I need some help.
-                  {% endblocktrans %}
+                  <p>
+
+                    {% blocktrans trimmed %}
+                      I'm not sure what I'm doing and I need some help.
+                    {% endblocktrans %}
+                  </p>
                 </div>
               </div>
-            </div>
-
+            </a>
           </div>
         </div>
 
-        <div class="ui form basic fieldset segment">
-          <div class="field menu">
-            <label class="required">{% trans "Choose an option" %}</label>
-            <select class="ui fluid dropdown" name="organization" data-bind="semanticui: { tabmenu: {}}">
-              <option class="item" data-tab="registered">{% trans "Join an existing organization" %}</option>
-              <option class="item" data-tab="new">{% trans "I want to create a new organization" %}</option>
-              <option class="item" data-tab="not-sure">{% trans "I'm not sure" %}</option>
-            </select>
-          </div>
+        <div class="ui active tab" data-tab="empty">
+            {% comment %}
+            This tab is active and empty on purpose.
+            The idea here is to show nothing when the user arrives at this page.
+            {% endcomment %}
         </div>
 
-        <div class="ui active tab" data-tab="registered">
-          <p>
-            {% blocktrans %}
-              If you are having trouble joining an existing organization,
-              contact one of your organization's owners and request an invite.
-              They should email you a link that you can use to join.
-            {% endblocktrans %}
-          </p>
+        <div class="ui tab" data-tab="registered">
+
+          {% blocktrans %}
+
+            If you are having trouble joining an existing organization,
+            contact one of your organization's owners and request an invite.
+            They should email you a link that you can use to join.
+          {% endblocktrans %}
         </div>
 
         <div class="ui tab" data-tab="new">
@@ -96,12 +107,20 @@
         <div class="ui bottom attached tab" data-tab="not-sure">
           <p>
             {% url 'support' as support_url %}
-            {% blocktrans trimmed with support_url=support_url %}
+            {% blocktrans trimmed %}
               If you want to start the trial period of a paid subscription to try out Read the Docs in your company,
-              you should select the option "I want to create a new organization".
+              you should select the option "Create a new organization".
+            {% endblocktrans %}
+          </p>
+          <p>
+            {% blocktrans trimmed %}
               Otherwise, if someone else has already created an organization and you want to join it,
               select "Join an existing organization".
+            {% endblocktrans %}
+          </p>
 
+          <p>
+            {% blocktrans trimmed with support_url=support_url %}
               If you are not sure, contact us using the <a href="{{ support_url }}">support form</a> and we will help you
               with this process.
             {% endblocktrans %}
