--- a/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
+++ b/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
@@ -10,18 +10,15 @@
 {% load ext_theme_tags %}
 
 {% block top_menu %}
-  {% if form.non_field_errors %}
-    <div class="ui error message">{{ form.non_field_errors }}</div>
-  {% endif %}
+  {% if form.non_field_errors %}<div class="ui error message">{{ form.non_field_errors }}</div>{% endif %}
   {{ block.super }}
 {% endblock top_menu %}
 {% block top_left_menu_items %}
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
-  <div class="ui green button" data-bind="click: $root.show_modal('socialaccount-connections')">
-    {% trans "Add new connection" %}
-  </div>
+  <div class="ui green button"
+       data-bind="click: $root.show_modal('socialaccount-connections')">{% trans "Add new connection" %}</div>
 {% endblock %}
 
 {% block list_placeholder_icon_class %}fa-duotone fa-user-unlock{% endblock %}
@@ -37,10 +34,9 @@
   </div>
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
-  <a class="ui button" href="https://docs.readthedocs.io/en/stable/guides/connecting-git-account.html"
-     aria-label="{% trans "Learn more about this feature in our documentation pages" %}">
-    {% trans "Learn more" %}
-  </a>
+  <a class="ui button"
+     href="https://docs.readthedocs.io/en/stable/guides/connecting-git-account.html"
+     aria-label="{% trans "Learn more about this feature in our documentation pages" %}">{% trans "Learn more" %}</a>
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_menu %}
@@ -48,7 +44,8 @@
     {% csrf_token %}
     <input type="hidden" name="account" value="{{ object.id }}" />
     <div class="ui small icon buttons">
-      <button class="ui button {% if not object|can_be_disconnected %}disabled{% endif %}" data-content="{% trans 'Disconnect account' %}">
+      <button class="ui button {% if not object|can_be_disconnected %}disabled{% endif %}"
+              data-content="{% trans 'Disconnect account' %}">
         <i class="fas fa-trash icon"></i>
       </button>
     </div>
@@ -56,7 +53,10 @@
 {% endblock list_item_right_menu %}
 
 {% block list_item_image %}
-  <img class="ui rounded image" src="{{ object.get_avatar_url }}" height=28 width=28 />
+  <img class="ui rounded image"
+       src="{{ object.get_avatar_url }}"
+       height="28"
+       width="28" />
 {% endblock list_item_image %}
 
 {% block list_item_header %}
